--- a/magiceightball.html
+++ b/magiceightball.html
@@ -10,7 +10,7 @@
     <body onload="createTriangleMessage()">
         <div id="projectDiv">
             <div id="eightBallDiv">
-                <h1 id="projectTitle">Magic Eigth Ball Sim</h1>
+                <h1 id="projectTitle">Magic Eight Ball Sim</h1>
                 <br />
                 <div id="eightball">
                     <div id="triangle">
